--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 	<head>
 		<title>Phrases Machine</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
+		<link href='http://fonts.googleapis.com/css?family=Bevan' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
 	</head>
-
+		<div id="difficulty">0</div>
+		<div id="score">score: <span id="score-display">0</span></div>
+		<h1>Phrases Machine</h1>
+		<h2></h2>
+		<div id="main"></div>
+		<input type="submit"></input>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="js/phrases-machine.js"></script>
 	<body>
 	</body>
