--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
 	</head>
 		<div id="difficulty">0</div>
-		<div id="score">score: <span id="score-display">0</span></div>
+		<div id="hud-left">
+			<div id="score">score: <span id="score-display">0</span></div>
+			<div id="hints">hints: <span id="hints-display">3</span></div>
+		</div>
 		<h1>Phrases Machine</h1>
 		<h2></h2>
 		<div id="main"></div>
 		<input type="submit"></input>
+		<input type="button" value="Hint"></input>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="js/phrases-machine.js"></script>
