Header now dynamically resizes
Closes #3

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<input type="submit"></input>
 		<input type="button" value="Hint"></input>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="js/jquery.fittext.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script type="text/javascript" src="js/phrases-machine.js"></script>
 	<body>
