--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="js/jquery.fittext.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-		<script type="text/javascript" src="js/phrases-machine.js"></script>
+		<script type="text/javascript" src="js/phrases-machine.min.js"></script>
 	<body>
 	</body>
 </html>
